--- a/.github/workflows/localhook.yml
+++ b/.github/workflows/localhook.yml
@@ -28,4 +28,4 @@ jobs:
         python -m pip install --upgrade pip
         pip install -rrequirements.txt
     - name: Run pre-commit
-      run: pre-commit run --all-files
+      run: pre-commit run --all-files --color=always
