--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,7 +49,7 @@ repos:
     -   id: mypy
         additional_dependencies: [types-all]
 -   repo: https://github.com/crate-ci/typos
-    rev: dictgen-v0.2.4
+    rev: v1.12.8
     hooks:
       - id: typos
 -   repo: https://github.com/shellcheck-py/shellcheck-py
