--- a/.github/workflows/localhook.yml
+++ b/.github/workflows/localhook.yml
@@ -13,6 +13,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - name: git shortlog
+      run: git log | git shortlog -sne
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
