--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,8 +48,8 @@ repos:
     rev: v1.15.0
     hooks:
     -   id: mypy
--   repo: https://github.com/crate-ci/typos
-    rev: v1
+-   repo: https://github.com/adhtruong/mirrors-typos
+    rev: v1.30.0
     hooks:
       - id: typos
 -   repo: https://github.com/shellcheck-py/shellcheck-py
